add a border on the whitelink menu

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -107,7 +107,7 @@ a.navbar-nav-menu-item {
     display: block;
     padding: 18px;
     padding-left: 32px;
-    border-bottom: 1px solid #000000;
+    border: 1px solid #000000;
     font-weight: bold;
     color: #343434;
 }
