--- a/css/navbar.css
+++ b/css/navbar.css
@@ -141,3 +141,18 @@ select.navbar-noStyle {
     padding: 0;
     font-size: 0;
 }
+
+#navbar-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent overlay */
+    z-index: 12310; /* Just below the menu drawer */
+    display: none; /* Hidden by default */
+}
+
+.drawMenu #navbar-overlay {
+    display: block; /* Show the overlay when the menu is open */
+}
