--- a/css/navbar.css
+++ b/css/navbar.css
@@ -156,3 +156,39 @@ select.navbar-noStyle {
 .drawMenu #navbar-overlay {
     display: block; /* Show the overlay when the menu is open */
 }
+
+
+/* CSS for confirmation for when the user sends a message */
+.confirmation-modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 9999;
+    justify-content: center;
+    align-items: center;
+}
+
+.confirmation-content {
+    background: white;
+    padding: 20px 30px;
+    border-radius: 8px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.confirmation-message {
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
+.confirmation-success {
+    color: #007bff; /* Green */
+}
+
+.confirmation-error {
+    color: #dc3545; /* Red */
+}
