--- a/css/projects.css
+++ b/css/projects.css
@@ -103,3 +103,10 @@
 .tech-logo:hover {
     transform: scale(1.1); /* Slight zoom on hover */
 }
+
+@media (max-width: 768px) {
+    #projects {
+        align-items: center;
+        padding: 0px 35px 0px 35px;
+    }
+}
