Adjusted the padding of the timeline

--- a/css/work.css
+++ b/css/work.css
@@ -3,12 +3,13 @@
     background-color: #2C2C2C; /* Dark background */
     color: #ffffff; /* Light text */
     align-items: center;
-    padding: 0px 100px 0px 100px;
+    padding: 0px 175px 0px 175px;
 }
 
 .education-timeline {
     position: relative;
-    padding: 20px 0;
+    align-items: center;
+    padding: 0 0 0 0;
 }
 
 .education-timeline::before {
