--- a/css/scrollUp.css
+++ b/css/scrollUp.css
@@ -1,8 +1,9 @@
 /* Arrow Up Button Styling */
 #scrollToTop {
     position: fixed;
-    bottom: 80px; 
-    right: 37px;
+    bottom: 35px;
+    right: 5px;
+    padding: 15px;
     font-size: 50px; /* Arrow size */
     color: #ffffff; /* Arrow color */
     cursor: pointer;
