--- a/css/contact.css
+++ b/css/contact.css
@@ -38,7 +38,7 @@
 }
 
 .contact-input {
-    background-color: #424242; /* Dark input background */
+    background-color: #DCDCDC; /* Dark input background */
     color: white; /* White text */
     border: 1px solid #444; /* Subtle border */
     border-radius: 5px;
