adjusted the send message pop up font size globally

--- a/css/contact.css
+++ b/css/contact.css
@@ -73,7 +73,7 @@
     left: 0;
     width: 100%;
     padding: 20px 30px;
-    background-color: #00c8ff; /* Green for success */
+    background-color: #0085cc; 
     color: #ffffff;
     font-size: 1rem;
     font-weight: bold;
